# cl1-simulator

./: .gitignore  README.md  cl.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
cl_sim/: __init__.py  service.py
cl_sim/api/: __init__.py  data_stream.py  neurons.py  open.py  recording.py  stim.py  types.py
cl_sim/backends/: __init__.py  base.py  replay.py  synthetic.py
cl_sim/runtime/: __init__.py  buffer.py  clock.py  scheduler.py  stim_queue.py
cl_sim/storage/: __init__.py  jsonl_reader.py  jsonl_writer.py
cl_sim/training/: __init__.py  ablation.py  session.py  types.py
cl_sim/transport/: __init__.py  events.py  protocol.py
components/cl1/: cl1-bridge-deck.tsx  cl1-channel-heatmap.tsx  cl1-control-plane-log.tsx  cl1-device-timing.tsx  cl1-feedback-bar.tsx  cl1-recording-bar.tsx  cl1-safety-limits.tsx  cl1-sfe-rounds.tsx  cl1-transport-lanes.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
docs/: CL1-udp-protocol.md  PRD-dashboard-layout.md  python-cl-simulator.md
lib/simulator/: cl1-constants.ts  core.ts  host-runtime.ts  packets.test.ts  packets.ts  python-backend.ts  (+2 more)
references/: cl1-model-patterns.md  cl1-operations-patterns.md
scripts/: README.md  cl1_channel_layout_helper.py  cl1_feedback_scaling_helper.py  cl1_multiport_protocol_helper.py  cl1_stim_cache.py  cl1_stim_safety_validator.py  cl1_transport_self_test.py  cl1_udp_training_scaffold.py
tests/: test_loop_and_read.py  test_recording_and_replay.py  test_stim_plan_transport_training.py  test_stim_validation.py
(+7 files in other folders)
