[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cl-sim"
version = "0.1.0"
description = "CL-compatible local simulator and replay stack for Cortical Labs-style workflows"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["cl_sim*"]
